date cnx string and schema fix
